# tree-sitter-llvm

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  package.json  pyproject.toml  tree-sitter.json
bindings/rust/: lib.rs
test/corpus/: instructions.ll  regressions.ll  structure.ll
