[package]
name = "tree-sitter-llvm"
description = "LLVM grammar for the tree-sitter parsing library"
version = "1.1.0"
keywords = ["incremental", "parsing", "LLVM"]
categories = ["parsing", "text-editors"]
authors = ["Benjamin Graham <benwilliamgraham@gmail.com>", "Flakebi", "leifhelm", "luc-tielen", "RubixDev", "Acture"]
repository = "https://github.com/tree-sitter/tree-sitter-LLVM"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.25.6"

[build-dependencies]
cc = "1.0"
